--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
   	</scm>
 	 
 	<dependencies>
+		<!-- General Dependencies -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -90,6 +91,12 @@
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.7</version>
 		</dependency>
 		<!-- FHIR Dependencies -->
 		<dependency>
