--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,34 @@
 			<artifactId>hapi-fhir-validation-resources-r4</artifactId>
 			<version>4.2.0</version>
 		</dependency>
+		<!-- CDA2FHIR Dependencies -->
+		<!-- MDHT: CDA manipulation -->
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-structures-dstu3</artifactId>
+			<version>5.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openehealth.ipf.modules</groupId>
+			<artifactId>ipf-modules-cda-mdht</artifactId>
+			<version>3.6-20190124</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/ca.uhn.hapi.fhir/hapi-fhir-client -->
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-client</artifactId>
+			<version>3.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.helger</groupId>
+			<artifactId>ph-schematron</artifactId>
+			<version>5.0.8</version>
+		</dependency>
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
+			<version>5.4.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
