--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.connectedhealth-idaas</groupId>
 	<artifactId>idaas-eventbuilder</artifactId>
-	<version>2.1.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<name>iDAAS Event Builder and Parser</name>
 	<description>iDAAS EventBuilder is designed to help ANY implementation build, parse and/or transform data.</description>
 	<url>http://connectedhealth-idaas.io/</url>
@@ -218,6 +218,7 @@
 						<configuration>
 							<gpgArguments>
 							  <arg>--no-tty</arg>
+							  <arg>--batch</arg>
 							</gpgArguments>
 						</configuration>
 					</plugin>
