--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
 	<groupId>io.connectedhealth-idaas</groupId>
 	<artifactId>idaas-eventbuilder</artifactId>
-	<version>2.2.9-SNAPSHOT</version>
-	<name>iDAAS Event Builder and Parser</name>
+	<version>2.3.0-SNAPSHOT</version>
+	<name>iDAAS Event Builder - Parser, Data Generator and Data Builder</name>
 	<description>iDAAS EventBuilder is designed to help ANY implementation build, parse and/or transform data.</description>
 	<url>http://connectedhealth-idaas.io/</url>
 
@@ -65,6 +65,12 @@
 			<organization>Red Hat</organization>
 			<organizationUrl>http://www.redhat.com</organizationUrl>
 		</developer>
+		<developer>
+			<name>Jonathan Myer</name>
+			<email>jonathan.myer@ibm.com</email>
+			<organization>Red Hat</organization>
+			<organizationUrl>http://www.redhat.com</organizationUrl>
+		</developer>
 	</developers>
 
 	<scm>
@@ -106,12 +112,12 @@
 		</dependency>
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
-			<artifactId>hapi-fhir-structures-r4</artifactId>
+			<artifactId>hapi-fhir-validation-resources-dstu2</artifactId>
 			<version>4.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
-			<artifactId>hapi-fhir-validation-resources-dstu2</artifactId>
+			<artifactId>hapi-fhir-structures-r4</artifactId>
 			<version>4.2.0</version>
 		</dependency>
 		<dependency>
@@ -119,12 +125,26 @@
 			<artifactId>hapi-fhir-validation-resources-r4</artifactId>
 			<version>4.2.0</version>
 		</dependency>
-		<!-- CDA2FHIR Dependencies -->
-		<!-- MDHT: CDA manipulation -->
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
 			<artifactId>hapi-fhir-structures-dstu3</artifactId>
 			<version>5.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
+			<version>5.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>org.hl7.fhir.core</artifactId>
+			<version>5.1.7</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>org.hl7.fhir.convertors</artifactId>
+			<version>5.4.9</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openehealth.ipf.modules</groupId>
@@ -142,22 +162,7 @@
 			<artifactId>ph-schematron</artifactId>
 			<version>5.0.8</version>
 		</dependency>-->
-		<dependency>
-			<groupId>ca.uhn.hapi.fhir</groupId>
-			<artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
-			<version>5.4.2</version>
-		</dependency>
-		<dependency>
-			<groupId>ca.uhn.hapi.fhir</groupId>
-			<artifactId>org.hl7.fhir.core</artifactId>
-			<version>5.1.7</version>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-			<groupId>ca.uhn.hapi.fhir</groupId>
-			<artifactId>org.hl7.fhir.convertors</artifactId>
-			<version>5.4.9</version>
-		</dependency>
+
 	</dependencies>
 
 	<build>
