--- a/.github/workflows/base-maven-build.yml
+++ b/.github/workflows/base-maven-build.yml
@@ -22,4 +22,4 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     - name: Build with Maven
-      run: mvn -DskipTests -B package --file pom.xml
+      run: mvn -Dmaven.test.skip=true -B package --file pom.xml
